--- a/README
+++ b/README
@@ -1,3 +1,13 @@
+#BKCommonLib for 1.8.8
+
+**This version works with ViaVersion properly and ProtocolLib**
+
+**Download from http://myles.us/ViaVersion/orebfuscator-3.0.6-for-1.8.3-spigot.jar for 1.8.3**
+
+**Download from http://myles.us/ViaVersion/orebfuscator-3.0.6-for-1.8.8-spigot.jar for 1.8.8**
+
+**If you don't want to compile**
+
 Copyright (C) 2011-2015 lishid.  All rights reserved.
 
 This program is free software: you can redistribute it and/or modify
